# ChatApp

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: main.cpp
src/core/: Client.hpp  Message.cpp  Message.hpp  Misc.hpp  Mode.hpp  Processor.cpp  Processor.hpp
src/docs/: CMakeLists.txt  Doxyfile.in
src/ui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/ui/widgets/: AppWidget.cpp  AppWidget.hpp  AppWidget.ui  ModeSelect.cpp  ModeSelect.hpp  ModeSelect.ui
